fixed alignment issue with caption on FF/Edge

--- a/src/sass/static/home.scss
+++ b/src/sass/static/home.scss
@@ -117,7 +117,6 @@
         }
         img {
             max-height: 100px;
-            width: auto;
         }
         .caption {
             font-size: $FONT_SIZE_XXS;
